fix table spacing

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -239,6 +239,9 @@ body
         table
           tr
             td
+              padding: 5px
+              text-align: right
+              width: 120px
         ul
           margin: 0 auto
           li
